Modified handler to use table indexing and elem object after review

--- a/test/specimen.html
+++ b/test/specimen.html
@@ -263,12 +263,14 @@ incididunt ut labore et dolore magna aliqua.</p>
 <p><span class="italic">This text should be in italic.</span> Lorem
 ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
 incididunt ut labore et dolore magna aliqua.</p>
-<h3 id="bold-weight-inline">Bold Weight Inline</h3>
+<h3 id="bold-font-inline">Bold Font Inline</h3>
 <p><span class="bold">This text should be in Bold.</span> Lorem ipsum
 dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
 incididunt ut labore et dolore magna aliqua.</p>
-<p><strong>Pandoc already provides and inline smallcaps font style
-hence, it is not implemented by this plugin.</strong></p>
+<h3 id="small-capitals-font-inline">Small Capitals Font Inline</h3>
+<p><span class="smallcaps">This text should be in small capitals.</span>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua.</p>
 <h2 id="font-sizes-for-inline-elements">Font sizes for Inline
 Elements</h2>
 <h3 id="extra-extra-small-font-inline">Extra Extra Small Font
