Added content that uses a combination of styles

--- a/specimens/specimen.html
+++ b/specimens/specimen.html
@@ -239,6 +239,38 @@ eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
 ex.</p>
 </div>
+<h2 id="combination-styles-for-block-elements">Combination Styles for
+Block Elements</h2>
+<h3 id="small-capitals-bold-and-italic-for-blocks">Small Capitals, Bold
+and Italic for Blocks</h3>
+<div class="sc bf it">
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+sint occaecat cupidatat non proident</p>
+</div>
+<h3 id="monospace-extra-small-text-and-bold-for-blocks">Monospace, Extra
+Small Text and Bold for Blocks</h3>
+<div class="tt xsmall bf">
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+sint occaecat cupidatat non proident</p>
+</div>
+<h3 id="right-justified-sans-serif-and-italic-for-blocks">Right
+Justified, Sans-serif and Italic for Blocks</h3>
+<div class="flushright sf it">
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+sint occaecat cupidatat non proident</p>
+</div>
 <h2 id="font-styles-for-inline-elements">Font Styles for Inline
 Elements</h2>
 <h3 id="bold-font-inline">Bold Font Inline</h3>
@@ -296,6 +328,24 @@ tempor incididunt ut labore et dolore magna aliqua.</p>
 Inline</h3>
 <p><span class="xxlarge">This text should be in extra extra large
 size.</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<h2 id="combination-styles-for-inline-elements">Combination Styles for
+Inline Elements</h2>
+<h3 id="small-capitals-bold-and-italic-for-inline">Small Capitals, Bold
+and Italic for Inline</h3>
+<p><span class="sc bf it">This text should be small capitals, bold and
+italic.</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<h3 id="monospace-extra-small-text-and-bold-for-inline">Monospace, Extra
+Small Text and Bold for Inline</h3>
+<p><span class="tt xsmall bf">This text should be in monospace, extra
+small size and bold.</span> Lorem ipsum dolor sit amet, consectetur
+adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+magna aliqua.</p>
+<h3 id="sans-serif-and-italic-for-inline">Sans-serif and Italic for
+Inline</h3>
+<p><span class="sf it">This text should be in sans-serif and
+italic.</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit,
 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 </body>
 </html>
