Added extra styles for font types and font sizes

--- a/specimens/specimen.html
+++ b/specimens/specimen.html
@@ -33,8 +33,16 @@ Elements</h2>
 <p><span class="bold">This text should be in bold.</span> Lorem ipsum
 dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
 incididunt ut labore et dolore magna aliqua.</p>
+<h3 id="emphasis-inline">Emphasis Inline</h3>
+<p><span class="emphasis">This text should have emphasis.</span> Lorem
+ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+incididunt ut labore et dolore magna aliqua.</p>
 <h3 id="italic-font-inline">Italic Font Inline</h3>
 <p><span class="italic">This text should be in italic.</span> Lorem
+ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+incididunt ut labore et dolore magna aliqua.</p>
+<h3 id="lowercase-inline">Lowercase Inline</h3>
+<p><span class="lower">This text should be in lowercase.</span> Lorem
 ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
 incididunt ut labore et dolore magna aliqua.</p>
 <h3 id="medium-font-inline">Medium Font Inline</h3>
@@ -61,15 +69,33 @@ incididunt ut labore et dolore magna aliqua.</p>
 <p><span class="serif">This text should be in serif.</span> Lorem ipsum
 dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
 incididunt ut labore et dolore magna aliqua.</p>
+<h3 id="slanted-font-inline">Slanted Font Inline</h3>
+<p><span class="slanted">This text should be slanted.</span> Lorem ipsum
+dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+incididunt ut labore et dolore magna aliqua.</p>
 <h3 id="small-capitals-font-inline">Small Capitals Font Inline</h3>
 <p><span class="smallcaps">This text should be in small capitals.</span>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua.</p>
+<h3 id="uppercase-font-inline">Uppercase Font Inline</h3>
+<p><span class="upper">This text should be in uppercase.</span> Lorem
+ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+incididunt ut labore et dolore magna aliqua.</p>
+<h3 id="upright-font-inline">Upright Font Inline</h3>
+<div class="italic">
+<p><span class="upright">This text should be upright.</span> Lorem ipsum
+dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+incididunt ut labore et dolore magna aliqua.</p>
+</div>
 <h2 id="font-sizes-for-inline-elements">Font sizes for Inline
 Elements</h2>
+<h3 id="tiny-size-font-inline">Tiny Size Font Inline</h3>
+<p><span class="tiny">This test should be in tiny size.</span> Lorem
+ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+incididunt ut labore et dolore magna aliqua.</p>
 <h3 id="extra-extra-small-size-font-inline">Extra Extra Small Size Font
 Inline</h3>
-<p><span class="xxsmall">This test should be extra extra small
+<p><span class="xxsmall">This text should be in extra extra small
 size.</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit,
 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 <h3 id="extra-small-size-font-inline">Extra Small Size Font Inline</h3>
@@ -97,6 +123,10 @@ Inline</h3>
 <p><span class="xxlarge">This text should be in extra extra large
 size.</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit,
 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<h3 id="huge-size-font-inline">Huge Size Font Inline</h3>
+<p><span class="huge">This text should be in huge size.</span> Lorem
+ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+incididunt ut labore et dolore magna aliqua.</p>
 <h2 id="combination-styles-for-inline-elements">Combination Styles for
 Inline Elements</h2>
 <h3 id="small-capitals-bold-and-italic-for-inline">Small Capitals, Bold
@@ -119,6 +149,16 @@ sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 Elements</h2>
 <h3 id="bold-font-block">Bold Font Block</h3>
 <div class="bold">
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+mollit anim id est laborum.</p>
+</div>
+<h3 id="emphasis-font-block">Emphasis Font Block</h3>
+<div class="emphasis">
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
@@ -187,6 +227,16 @@ voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
 sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
 mollit anim id est laborum.</p>
 </div>
+<h3 id="slanted-font-block">Slanted Font Block</h3>
+<div class="slanted">
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+mollit anim id est laborum.</p>
+</div>
 <h3 id="small-capitals-font-block">Small Capitals Font Block</h3>
 <div class="smallcaps">
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -197,8 +247,28 @@ voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
 sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
 mollit anim id est laborum.</p>
 </div>
+<h3 id="upright-font-block">Upright Font Block</h3>
+<div class="upright">
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+mollit anim id est laborum.</p>
+</div>
 <h2 id="font-sizes-for-block-elements">Font sizes for Block
 Elements</h2>
+<h3 id="tiny-size-font-block">Tiny Size Font Block</h3>
+<div class="tiny">
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+mollit anim id est laborum.</p>
+</div>
 <h3 id="extra-extra-small-size-font-block">Extra Extra Small Size Font
 Block</h3>
 <div class="xxsmall">
@@ -262,6 +332,13 @@ sint occaecat cupidatat non proident</p>
 <h3 id="extra-extra-large-size-font-block">Extra Extra Large Size Font
 Block</h3>
 <div class="xxlarge">
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+ex.</p>
+</div>
+<h3 id="huge-size-font-block">Huge Size Font Block</h3>
+<div class="huge">
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
