Added capability to style links

--- a/specimens/specimen.html
+++ b/specimens/specimen.html
@@ -87,6 +87,82 @@ incididunt ut labore et dolore magna aliqua.</p>
 dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
 incididunt ut labore et dolore magna aliqua.</p>
 </div>
+<h3 id="font-style-for-links">Font Style for Links</h3>
+<table>
+<thead>
+<tr class="header">
+<th style="text-align: left;">Font Styles</th>
+<th style="text-align: left;">Output</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">Bold Font</td>
+<td style="text-align: left;"><a href="https://github.com"
+class="bf">GitHub Homepage</a></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Emphasis Font</td>
+<td style="text-align: left;"><a href="https://github.com"
+class="em">GitHub Homepage</a></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Italic Font</td>
+<td style="text-align: left;"><a href="https://github.com"
+class="it">GitHub Homepage</a></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Lowercase Font</td>
+<td style="text-align: left;"><a href="https://github.com"
+class="lower">GitHub Homepage</a></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Medium Font</td>
+<td style="text-align: left;"><a href="https://github.com"
+class="md">GitHub Homepage</a></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Monospace Font</td>
+<td style="text-align: left;"><a href="https://github.com"
+class="tt">GitHub Homepage</a></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Normal Font</td>
+<td style="text-align: left;"><a href="https://github.com"
+class="nf">GitHub Homepage</a></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Sans-serif Font</td>
+<td style="text-align: left;"><a href="https://github.com"
+class="sf">GitHub Homepage</a></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Serif Font</td>
+<td style="text-align: left;"><a href="https://github.com"
+class="rm">GitHub Homepage</a></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Slanted Font</td>
+<td style="text-align: left;"><a href="https://github.com"
+class="sl">GitHub Homepage</a></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Small Capitals Font</td>
+<td style="text-align: left;"><a href="https://github.com"
+class="sc">GitHub Homepage</a></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Uppercase Font</td>
+<td style="text-align: left;"><a href="https://github.com"
+class="upper">GitHub Homepage</a></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Upright Font</td>
+<td style="text-align: left;"><a href="https://github.com"
+class="up">GitHub Homepage</a></td>
+</tr>
+</tbody>
+</table>
 <h2 id="font-sizes-for-inline-elements">Font sizes for Inline
 Elements</h2>
 <h3 id="tiny-size-font-inline">Tiny Size Font Inline</h3>
