Added support to enable underlining of text through metadata

--- a/specimens/specimen.html
+++ b/specimens/specimen.html
@@ -17,6 +17,7 @@
     .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
   <link rel="stylesheet" href="specimen.css" />
+  
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
@@ -221,10 +222,41 @@ Inline</h3>
 <p><span class="sf it">This text should be in sans-serif and
 italic.</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit,
 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<h2 id="styles-provided-by-the-ulem-latex-package">Styles Provided by
+the <code>ulem</code> LaTeX Package</h2>
+<h3 id="dashed-underline-text">Dashed Underline Text</h3>
+<p><span class="dashuline">This text should be dashed underlined.</span>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua.</p>
+<h3 id="dotted-underline-text">Dotted Underline Text</h3>
+<p><span class="dotuline">This text should be dotted underlined.</span>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua.</p>
+<h3 id="underlined-text">Underlined Text</h3>
+<p><span class="uline">This text should be underlined.</span> Lorem
+ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+incididunt ut labore et dolore magna aliqua.</p>
+<h3 id="double-underlined-text">Double Underlined Text</h3>
+<p><span class="uuline">This text should be double underlined.</span>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua.</p>
+<h3 id="wavy-underlined-text">Wavy Underlined Text</h3>
+<p><span class="uwave">This text should be wavy underlined.</span> Lorem
+ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+incididunt ut labore et dolore magna aliqua.</p>
+<h3 id="stricken-out-text">Stricken Out Text</h3>
+<p><span class="sout">This text should be stricken out.</span> Lorem
+ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+incididunt ut labore et dolore magna aliqua.</p>
+<h3 id="marked-over-text-not-supported-in-html">Marked Over Text (not
+supported in HTML)</h3>
+<p><span class="xout">This text should be marked over.</span> Lorem
+ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+incididunt ut labore et dolore magna aliqua.</p>
 <h2 id="font-styles-for-block-elements">Font Styles for Block
 Elements</h2>
 <h3 id="bold-font-block">Bold Font Block</h3>
-<div class="bold">
+<div class=".bold">
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
