Modifed wording in README and regenerated files

--- a/specimens/specimen.html
+++ b/specimens/specimen.html
@@ -167,7 +167,7 @@ class="up">GitHub Homepage</a></td>
 <h2 id="font-sizes-for-inline-elements">Font sizes for Inline
 Elements</h2>
 <h3 id="tiny-size-font-inline">Tiny Size Font Inline</h3>
-<p><span class="tiny">This test should be in tiny size.</span> Lorem
+<p><span class="tiny">This text should be in tiny size.</span> Lorem
 ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
 incididunt ut labore et dolore magna aliqua.</p>
 <h3 id="extra-extra-small-size-font-inline">Extra Extra Small Size Font
