Changed name from layouts to text alignments

--- a/specimens/specimen.html
+++ b/specimens/specimen.html
@@ -484,7 +484,8 @@ ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
 voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
 sint occaecat cupidatat non proident</p>
 </div>
-<h2 id="layouts-for-block-elements">Layouts for Block Elements</h2>
+<h2 id="text-alignments-for-block-elements">Text Alignments for Block
+Elements</h2>
 <h3 id="centered-block">Centered Block</h3>
 <div class="center">
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
