Improved example specimens and README after review

--- a/specimens/specimen.html
+++ b/specimens/specimen.html
@@ -71,10 +71,11 @@ tempor incididunt ut labore et dolore magna aliqua.</p>
 ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
 incididunt ut labore et dolore magna aliqua.</p>
 <h3 id="serif-font-inline">Serif Font Inline</h3>
-<p><span class="serif">This text should be in serif.</span> <span
-class="sans">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-sed do eiusmod tempor incididunt ut labore et dolore magna
-aliqua</span>.</p>
+<div class="sans">
+<p><span class="serif">This text should be in serif.</span> Lorem ipsum
+dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+incididunt ut labore et dolore magna aliqua.</p>
+</div>
 <h3 id="slanted-font-inline">Slanted Font Inline</h3>
 <p><span class="slanted">This text should be slanted.</span> Lorem ipsum
 dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
